# crm_project

CRM_system/: README 1.md  README.md  manage.py  requirements.txt
CRM_system/campaigns/: admin.py  forms.py  models.py  views.py
CRM_system/campaigns/migrations/: 0001_initial.py
CRM_system/campaigns/templates/campaigns/: campaigns_list.html
CRM_system/clients/: admin.py  models.py  urls.py  views.py
CRM_system/clients/migrations/: 0001_initial.py
CRM_system/contracts/: admin.py  forms.py  models.py  urls.py  views.py
CRM_system/contracts/migrations/: 0001_initial.py
CRM_system/leads/: admin.py  models.py  urls.py  views.py
CRM_system/leads/migrations/: 0001_initial.py
CRM_system/musite/: admin.py  models.py  settings.py  urls.py  views.py
CRM_system/services/: models.py  urls.py
CRM_system/services/migrations/: 0001_initial.py
CRM_system/static/css/: style.css
CRM_system/templates/: base.html  task_list.html
Chat_bot/: .env  Dockerfile  README.md  docker-compose.yml  habit_tracker_bot.py  pyproject.toml  requirements.txt  settings.py
Chat_bot/app/: config.py  db.py  main.py
Chat_bot/app/auth/: auth.py
Chat_bot/app/models/: habit.py  user.py
Chat_bot/app/routers/: habit.py
Chat_bot/app/schemas/: auth.py  goal.py  habit.py  reminder.py
Chat_bot/app/services/: goal_service.py  habit_service.py  reminder_service.py
Chat_bot/app/utils/: auth.py  date_utils.py  notification.py
Chat_bot/bot/: main.py
Service/: README.md  config.ini  file1.txt  read_token.py  requirements.txt  sync_service.py  token.json  yandex_disk_service.py
(+8 files in other folders)
